# dttourney

./: .breakpoints  pyproject.toml
ads/: admin.py  forms.py  models.py  urls.py  views.py
ads/migrations/: 0031_alter_ads_condition.py  0032_auto_20220926_1336.py  0033_rename_regsiteration_url_ads_no_of_slots.py  0034_ads_img_link.py  0035_auto_20221007_1342.py
ads/templates/ads/: ads-detail.html  ads-detail1.html  ads-detail2.html  ads-listing.html  ads-listing1.html  ads-search.html  ads-search1.html  author-archive.html  post-ads.html  post-ads1.html  post-ads2.html  post-success.html  text.txt  update_post.html
authentication/: forms.py  views.py
authentication/templates/authentication/: activate-account.html  activate-account1.html  confirm-email.html  login.html  password-reset-complete.html  password-reset-confirm.html  password-reset-confirm1.html  password-reset-message.html  password-reset.html  password-reset1.html  signup-success.html  signup.html  signup3.html
classifiedads/: settings.py
pages/: urls.py  views.py
pages/templates/pages/: contact.html  header.txt  index.html  index2.html
profiles/: views.py
profiles/templates/profiles/: account-close.html  account-dashboard.html  account-setting.html  account-setting1.html  account-sidebar.html  all-ads.html  favourite-ads.html
static/css/: main.css  ministyle.css  productdetail.css  styleindex.css  stylelogin.css  swiper.css
static/js/: main1.js  main19.js
templates/: 404.html  base-alt.html  base-alt1.html  base1.html  footer.html  header.html  header.txt  header3.html
